version-23.2/deploy/deployment-option/self-hosted/kubernetes/kubernetes-deploy.mdx
---
title: Deploy Redpanda in Kubernetes
tags:
  - Kubernetes
---

<head>
    <meta name="title" content="Deploy Redpanda using only the Helm Chart or with the Redpanda Operator | Redpanda Docs"/>
    <meta name="description" content="Deploy a Redpanda cluster in Kubernetes."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/deploy/deployment-option/self-hosted/kubernetes/kubernetes-deploy/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DefaultComponents from "./shared/_default-components.mdx"

This topic describes how to deploy a Redpanda cluster in Kubernetes.

## Prerequisites

Make sure that your Kubernetes cluster meets the [requirements](../kubernetes-cluster-requirements).

## Deploy Redpanda

In this step, you deploy Redpanda and Redpanda Console.

Redpanda Console is a developer-friendly web UI for managing and debugging your Redpanda cluster and your applications. Redpanda Console is included as a subchart in the Redpanda Helm chart.

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

:::caution
Redpanda Operator is in beta. Do not migrate existing production clusters to the Redpanda Operator.
:::

1. Make sure that you have permission to install custom resource definitions (CRDs):

  ```bash
  kubectl auth can-i create CustomResourceDefinition
  ```

  You need cluster-level permissions to install cert-manager and Redpanda Operator CRDs in the next steps.

1. Install [cert-manager](https://cert-manager.io/docs/installation/helm/) using Helm:

  ```bash
  helm repo add jetstack https://charts.jetstack.io
  helm repo update
  helm install cert-manager jetstack/cert-manager \
    --set installCRDs=true \
    --namespace cert-manager  \
    --create-namespace
  ```

  TLS is enabled by default. The Redpanda Helm chart uses cert-manager to manage TLS certificates by default.

1. Install the Redpanda Operator CRDs:

  ```bash
  kubectl kustomize https://github.com/redpanda-data/redpanda//src/go/k8s/config/crd | kubectl apply -f -
  ```

1. Deploy the Redpanda Operator:

  ```bash
  helm repo add redpanda https://charts.redpanda.com
  helm upgrade --install redpanda-controller redpanda/operator \
    --namespace <namespace> \
    --set image.repository=docker.redpanda.com/redpandadata/redpanda-operator \
    --set image.tag=v23.2.1 \
    --create-namespace
  ```

1. Ensure that the Deployment is successfully rolled out:

  ```bash
  kubectl --namespace <namespace> rollout status --watch deployment/redpanda-controller
  ```

  ```text-nocopy
  deployment "redpanda-controller" successfully rolled out
  ```

1. Install a Redpanda custom resource to deploy a Redpanda cluster and Redpanda Console:

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec: {}
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  The empty `clusterSpec` field configures the default settings in the Redpanda Helm chart.

1. Wait for the Redpanda Operator to deploy Redpanda using the Helm chart:

  ```bash
  kubectl get redpanda --namespace <namespace> --watch
  ```

  ```text-nocopy
  NAME       READY   STATUS
  redpanda   True    Redpanda reconciliation succeeded
  ```

1. Verify that each Redpanda broker is scheduled on only one Kubernetes node:

  ```bash
  kubectl get pod --namespace <namespace>  \
    -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
    app.kubernetes.io/component=redpanda-statefulset
  ```

  Example output:

  ```text-nocopy
  example-worker3   redpanda-0
  example-worker2   redpanda-1
  example-worker    redpanda-2
  ```

To deploy a fleet of two or more Redpanda clusters, use the RedpandaList resource.

:::note
All Redpanda custom resources must be deployed in the same namespace as the Redpanda Operator.
:::

```yaml
apiVersion: cluster.redpanda.com/v1alpha1
kind: RedpandaList
metadata:
items:
  - apiVersion: cluster.redpanda.com/v1alpha1
    kind: Redpanda
    metadata:
      name: redpanda
    spec:
      chartRef: {}
      clusterSpec: {}
```

</TabItem>
<TabItem value="helm" label="Helm">

1. Install cert-manager using Helm:

  ```bash
  helm repo add jetstack https://charts.jetstack.io
  helm repo update
  helm install cert-manager jetstack/cert-manager \
    --set installCRDs=true \
    --namespace cert-manager  \
    --create-namespace
  ```

  TLS is enabled by default. The Redpanda Helm chart uses cert-manager to manage TLS certificates.

1. Install the Redpanda Helm chart to deploy a Redpanda cluster and Redpanda Console:

  ```bash
  helm repo add redpanda https://charts.redpanda.com
  helm install redpanda redpanda/redpanda \
    --namespace <namespace> \
    --create-namespace
  ```

1. Wait for the Redpanda cluster to be ready:

  ```bash
  kubectl --namespace <namespace> rollout status statefulset redpanda --watch
  ```

  When the Redpanda cluster is ready, the output should look similar to the following:

  ```
  statefulset rolling update complete 3 pods at revision redpanda-8654f645b4...
  ```

1. Verify that each Redpanda broker is scheduled on only one Kubernetes node:

  ```bash
  kubectl get pod --namespace <namespace> \
  -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
  app.kubernetes.io/component=redpanda-statefulset
  ```

  Example output:

  ```text-nocopy
  example-worker3   redpanda-0
  example-worker2   redpanda-1
  example-worker    redpanda-2
  ```

</TabItem>
</Tabs>

## Explore the default Kubernetes components

<DefaultComponents/>

## Customize the deployment

To learn how to configure Redpanda, see [Configure Redpanda in Kubernetes](../../../../../manage/kubernetes/configure-helm-chart).

## Find the latest versions of the Redpanda Helm charts

To list the latest version of the Redpanda Helm chart, use the `helm search` command:

```bash
helm search repo redpanda
```

<!--
.Example output
[%collapsible%]
====
```
NAME             	CHART VERSION	APP VERSION	DESCRIPTION
redpanda/redpanda	2.4.0        	v22.3.9    	Redpanda is the real-time engine for modern apps.
redpanda/console 	0.3.3        	v2.0.2     	Helm chart to deploy Redpanda Console.
```
====
-->

To find the versions that are installed on your machine, run the following:

```bash
helm list --namespace <namespace>
```

## Production considerations

If you're deploying Redpanda for production, see the [production best practices](../kubernetes-best-practices).

## Next steps

See the [Manage Kubernetes topics](../../../../../manage/kubernetes) to learn how to customize the deployment to meet your needs.

## Suggested reading

- [Redpanda Helm Specification](../../../../../reference/redpanda-helm-spec)
- [Redpanda CRD Reference](../../../../../reference/crd)
